Bug 245580 - Dolphin advanced ACL editor silently fails if user does not have permission / options not grayed out
Summary: Dolphin advanced ACL editor silently fails if user does not have permission /...
Status: RESOLVED FIXED
Alias: None
Product: kfile
Classification: Unmaintained
Component: kpropertiesdialog (other bugs)
Version First Reported In: 4.11.0
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2010-07-23 22:28 UTC by bluescreenavenger
Modified: 2016-04-07 23:44 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
kde: Usability+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bluescreenavenger 2010-07-23 22:28:14 UTC
Version:           unspecified (using Devel) 
OS:                Linux

When a user tries to change permissions on a folder they don't have access to change with the advanced POSIX ACL editor and hit OK, Dolphin silently fails, instead of telling the user that they don't have access to the folder. 

Reproducible: Always




OS: Linux (i686) release 2.6.35-6-generic
Compiler: cc
Comment 1 Janek Bevendorff 2012-09-07 14:04:04 UTC
It does not only fail silently, the UI pretends it were possible to change the ACLs on those files/directories.
All options inside the "Advanced Permissions" dialog should be grayed out, including the labels for the "Set UID", "Set GID" and "Sticky" checkboxes (the checkboxes themselves are, but not the labels) as well as the ACL list and the add/edit/delete buttons on the right side.

I consider this a major usability issue.
Comment 2 Thomas Pfeiffer 2012-09-15 21:14:17 UTC
(From the usability team): I agree that this is a big usability problem and I agree with the solution suggested by Janek. This definitely has to be fixed.
Comment 3 Sander van Grieken 2014-09-18 12:11:02 UTC
still present in 4.14
Comment 4 bluescreenavenger 2016-03-17 00:52:37 UTC
Still present in 15.08.2
Comment 5 David Edmundson 2016-04-07 23:44:59 UTC
Git commit 549fdb643b171952b5101ae0c7b9f80f361f3845 by David Edmundson.
Committed on 07/04/2016 at 23:44.
Pushed by davidedmundson into branch 'master'.

Don't enable acl permissions widget if we don't own the file

The man page for setfacl says only the file owner or root can change the
permissions, so it would always fail. Better to disable it in the UI.
REVIEW: 127414

M  +1    -0    src/widgets/kpropertiesdialog.cpp

http://commits.kde.org/kio/549fdb643b171952b5101ae0c7b9f80f361f3845
Comment 6 David Edmundson 2016-04-07 23:44:59 UTC
Git commit 36d80144ab9acf078deb0379e6aff3a912f5d3da by David Edmundson.
Committed on 07/04/2016 at 23:44.
Pushed by davidedmundson into branch 'master'.

Set text on QCheckbox widget rather than using a separate label

This fixes (amongst other focus changes) the label having the right
enabled effect if the permissions are not editable.
REVIEW: 127418

M  +18   -33   src/widgets/kpropertiesdialog.cpp

http://commits.kde.org/kio/36d80144ab9acf078deb0379e6aff3a912f5d3da