Don't enable acl permissions widget if we don't own the file

The man page for setfacl says only the file owner or root can change the
permissions, so it would always fail. Better to disable it in the UI.

BUG: 245580
REVIEW: 127414